<resources>

    <string name="app_name">GPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_gps">Gps</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="velocidade">Velocidade</string>
    <string name="nao_disponivel">Não Disponível</string>
    <string name="disponivel">Disponível</string>
    <string name="title_activity_start_tracker">StartTracker</string>
    <string name="exit">Sair</string>
    <string name="map">Mapa</string>
    <string name="start_tracker">Iniciar rastreador</string>
    <string name="file_name_label">Nome do arquivo: </string>
    <string name="longitude_label">"Longitude: " </string>
    <string name="unknown"> desconhecido </string>
    <string name="road_home"> caminho de casa </string>
    <string name="ok"> OK </string>
    <string name="cancel"> Cancelar </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_dump_file">DumpFileActivity</string>
	<string name="dump_file"> Visualizar o arquivo </string>
</resources>